gitops/apps/emby/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: emby
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
